# Bard

./: .gitignore  Cargo.toml  README.md  info_sample.json
.github/workflows/: release_linux.yml  release_windows.yml
src/: main.rs
src/commands/: mod.rs  music.rs  other.rs  support.rs  voice.rs
src/handlers/: event_handler.rs  framework.rs
src/helpers/: credentials.rs  mod.rs  permissions.rs  utils.rs
src/structures/: cmd_data.rs  commands.rs  errors.rs  mod.rs
