[package]
name = "bard"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio  = { version = "1.0", features = ["rt-multi-thread", "process", "macros", "time"] }
tracing-subscriber = "0.2.15"
rust-clock = "0.1.0"
dashmap = "4.0.1"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
songbird = { version = "0.1", default-features = false, features = ["serenity-native", "gateway"] }
lavalink-rs = { version = "0.8.0", features = ["native", "serenity"] }
aspotify = "0.7.0"
serde = "1.0.130"
serde_json = "1.0.68"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
default-features = true
features = ["model", "collector", "native_tls_backend", "voice"]

[target.'cfg(linux)'.dependencies.openssl]
version = "0.10"
features = ["vendored"]

[patch.crates-io.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
